--- a/Practice_CPP.ipynb
+++ b/Practice_CPP.ipynb
@@ -16,7 +16,7 @@
    "id": "7ebc30e4",
    "metadata": {},
    "source": [
-    "#### Pattern 1\n",
+    "#### 1. Pattern 1\n",
     "<pre>\n",
     "***\n",
     "***\n",
@@ -58,7 +58,7 @@
    "id": "61c10114",
    "metadata": {},
    "source": [
-    "#### Pattern 2\n",
+    "#### 2. Pattern 2\n",
     "<pre>\n",
     "111\n",
     "222\n",
@@ -100,7 +100,7 @@
    "id": "72080c0c",
    "metadata": {},
    "source": [
-    "#### Pattern 3\n",
+    "#### 3. Pattern 3\n",
     "<pre>\n",
     "123\n",
     "123\n",
@@ -142,7 +142,7 @@
    "id": "42ae4ffa",
    "metadata": {},
    "source": [
-    "#### Pattern 4\n",
+    "#### 4. Pattern 4\n",
     "<pre>\n",
     "321\n",
     "321\n",
@@ -186,7 +186,7 @@
    "id": "8de2938f",
    "metadata": {},
    "source": [
-    "#### Pattern 5\n",
+    "#### 5. Pattern 5\n",
     "<pre>\n",
     "333\n",
     "222\n",
@@ -228,7 +228,7 @@
    "id": "322e6786",
    "metadata": {},
    "source": [
-    "#### Pattern 6\n",
+    "#### 6. Pattern 6\n",
     "<pre>\n",
     "123\n",
     "456\n",
@@ -271,7 +271,7 @@
    "id": "a9bf3dbe",
    "metadata": {},
    "source": [
-    "#### Pattern 7\n",
+    "#### 7. Pattern 7\n",
     "<pre>\n",
     "987\n",
     "654\n",
@@ -314,7 +314,7 @@
    "id": "50aea4c0",
    "metadata": {},
    "source": [
-    "#### Pattern 8\n",
+    "#### 8. Pattern 8\n",
     "<pre>\n",
     "123\n",
     "234\n",
@@ -356,7 +356,7 @@
    "id": "16b954c0",
    "metadata": {},
    "source": [
-    "#### Pattern 9\n",
+    "#### 9. Pattern 9\n",
     "<pre>\n",
     "*\n",
     "**\n",
@@ -398,7 +398,7 @@
    "id": "7f515f61",
    "metadata": {},
    "source": [
-    "#### Pattern 10\n",
+    "#### 10. Pattern 10\n",
     "<pre>\n",
     "***\n",
     "**\n",
@@ -440,7 +440,7 @@
    "id": "450c3b5d",
    "metadata": {},
    "source": [
-    "#### Pattern 11\n",
+    "#### 11. Pattern 11\n",
     "<pre>\n",
     "1\n",
     "23\n",
@@ -483,7 +483,7 @@
    "id": "98fe0f8c",
    "metadata": {},
    "source": [
-    "#### Pattern 12\n",
+    "#### 12. Pattern 12\n",
     "<pre>\n",
     "123\n",
     "45\n",
@@ -526,7 +526,7 @@
    "id": "574cf1f8",
    "metadata": {},
    "source": [
-    "#### Pattern 13\n",
+    "#### 13. Pattern 13\n",
     "<pre>\n",
     "654\n",
     "32\n",
@@ -569,7 +569,7 @@
    "id": "9b8d711c",
    "metadata": {},
    "source": [
-    "#### Pattern 14\n",
+    "#### 14. Pattern 14\n",
     "<pre>\n",
     "1\n",
     "23\n",
@@ -646,7 +646,7 @@
    "id": "cdf05ee7",
    "metadata": {},
    "source": [
-    "#### Pattern 15\n",
+    "#### 15. Pattern 15\n",
     "<pre>\n",
     "1\n",
     "21\n",
@@ -690,7 +690,7 @@
    "id": "5613a8ea",
    "metadata": {},
    "source": [
-    "#### Pattern 16\n",
+    "#### 16. Pattern 16\n",
     "<pre>\n",
     "AAA\n",
     "BBB\n",
@@ -735,7 +735,7 @@
    "id": "dfb3d500",
    "metadata": {},
    "source": [
-    "#### Pattern 17\n",
+    "#### 17. Pattern 17\n",
     "<pre>\n",
     "ABC\n",
     "ABC\n",
@@ -811,7 +811,7 @@
    "id": "da17c821",
    "metadata": {},
    "source": [
-    "#### Pattern 18\n",
+    "#### 18. Pattern 18\n",
     "<pre>\n",
     "ABC\n",
     "DEF\n",
@@ -855,7 +855,7 @@
    "id": "c43e38b2",
    "metadata": {},
    "source": [
-    "#### Pattern 19\n",
+    "#### 19. Pattern 19\n",
     "<pre>\n",
     "ABC\n",
     "BCD\n",
@@ -899,7 +899,7 @@
    "id": "25232aee",
    "metadata": {},
    "source": [
-    "#### Pattern 20\n",
+    "#### 20. Pattern 20\n",
     "<pre>\n",
     "A\n",
     "BB\n",
@@ -943,7 +943,7 @@
    "id": "d75319a3",
    "metadata": {},
    "source": [
-    "#### Pattern 21\n",
+    "#### 21. Pattern 21\n",
     "<pre>\n",
     "A\n",
     "BC\n",
@@ -989,7 +989,7 @@
    "id": "868db46f",
    "metadata": {},
    "source": [
-    "#### Pattern 22\n",
+    "#### 22. Pattern 22\n",
     "<pre>\n",
     "A\n",
     "BC\n",
@@ -1035,7 +1035,7 @@
    "id": "48b0bff7",
    "metadata": {},
    "source": [
-    "#### Pattern 23\n",
+    "#### 23. Pattern 23\n",
     "<pre>\n",
     "A\n",
     "AB\n",
@@ -1079,7 +1079,7 @@
    "id": "bdd2f0b5",
    "metadata": {},
    "source": [
-    "#### Pattern 24\n",
+    "#### 24. Pattern 24\n",
     "<pre>\n",
     "D\n",
     "CD\n",
@@ -1124,7 +1124,7 @@
    "id": "e8653977",
    "metadata": {},
    "source": [
-    "#### Pattern 25\n",
+    "#### 25. Pattern 25\n",
     "<pre>\n",
     "4\n",
     "34\n",
@@ -1168,7 +1168,7 @@
    "id": "cfdec993",
    "metadata": {},
    "source": [
-    "#### Pattern 26\n",
+    "#### 26. Pattern 26\n",
     "<pre>\n",
     "   *\n",
     "  **\n",
@@ -1219,7 +1219,7 @@
    "id": "7992e951",
    "metadata": {},
    "source": [
-    "#### Pattern 27\n",
+    "#### 27. Pattern 27\n",
     "<pre>\n",
     "   1\n",
     "  22\n",
@@ -1268,7 +1268,7 @@
    "id": "fa180693",
    "metadata": {},
    "source": [
-    "#### Pattern 28\n",
+    "#### 28. Pattern 28\n",
     "<pre>\n",
     "   1\n",
     "  12\n",
@@ -1319,7 +1319,7 @@
    "id": "9be9cb1d",
    "metadata": {},
    "source": [
-    "#### Pattern 29\n",
+    "#### 29. Pattern 29\n",
     "<pre>\n",
     "****\n",
     " ***\n",
@@ -1370,7 +1370,7 @@
    "id": "d3e0071f",
    "metadata": {},
    "source": [
-    "#### Pattern 30\n",
+    "#### 30. Pattern 30\n",
     "<pre>\n",
     "1234\n",
     " 234\n",
@@ -1421,7 +1421,7 @@
    "id": "fdd6ee22",
    "metadata": {},
    "source": [
-    "#### Pattern 31\n",
+    "#### 31. Pattern 31\n",
     "<pre>\n",
     "1111\n",
     " 222\n",
@@ -1470,7 +1470,7 @@
    "id": "3baa9c09",
    "metadata": {},
    "source": [
-    "#### Pattern 32\n",
+    "#### 32. Pattern 32\n",
     "<pre>\n",
     "   1\n",
     "  23\n",
@@ -1518,7 +1518,7 @@
    "id": "0d62a9dc",
    "metadata": {},
    "source": [
-    "#### Pattern 33\n",
+    "#### 33. Pattern 33\n",
     "<pre>\n",
     "   1\n",
     "  121\n",
@@ -1572,7 +1572,7 @@
    "id": "b91715c2",
    "metadata": {},
    "source": [
-    "#### Pattern 34\n",
+    "#### 34. Pattern 34\n",
     "<pre>\n",
     "   *\n",
     "  ***\n",
@@ -1626,7 +1626,7 @@
    "id": "f9ff5973",
    "metadata": {},
    "source": [
-    "#### Pattern 34\n",
+    "#### 35. Pattern 35\n",
     "<pre>\n",
     "*******\n",
     " *****\n",
@@ -1680,7 +1680,7 @@
    "id": "d840406e",
    "metadata": {},
    "source": [
-    "#### Pattern 35\n",
+    "#### 36. Pattern 36\n",
     "<pre>\n",
     "1234321\n",
     " 12321\n",
@@ -1734,7 +1734,7 @@
    "id": "e194e1f7",
    "metadata": {},
    "source": [
-    "#### Pattern 36\n",
+    "#### 37. Pattern 37\n",
     "<pre>\n",
     "12345*54321\n",
     "1234***4321\n",
@@ -1796,7 +1796,7 @@
    "id": "0cd306ae",
    "metadata": {},
    "source": [
-    "#### Pattern 37\n",
+    "#### 38. Pattern 38\n",
     "<pre>\n",
     "****\n",
     "*  *\n",
@@ -1845,7 +1845,7 @@
    "id": "01cc9769",
    "metadata": {},
    "source": [
-    "#### Pattern 38\n",
+    "#### 39. Pattern 39\n",
     "<pre>\n",
     "321\n",
     "654\n",
@@ -1887,7 +1887,7 @@
    "id": "e0f8efd8",
    "metadata": {},
    "source": [
-    "#### Pattern 39\n",
+    "#### 40. Pattern 40\n",
     "<pre>\n",
     "     *****\n",
     "    *****\n",
@@ -1935,7 +1935,7 @@
    "id": "faff6882",
    "metadata": {},
    "source": [
-    "#### Pattern 40\n",
+    "#### 41. Pattern 41\n",
     "<pre>\n",
     "    1\n",
     "   1 2\n",
@@ -1991,6 +1991,66 @@
     "}\n",
     "else{\n",
     "    cout<<\"Enter odd number!!\";\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ac5739b",
+   "metadata": {},
+   "source": [
+    "#### 42. Find a peak element which is not smaller than its neighbours\n",
+    "#### 8,9,8,2,3,7,6,8,11,8 -->> 11\n",
+    "#### 1,0,0 -->> 1\n",
+    "#### 4,4,4,4 -->> No peak found\n",
+    "#### 1,2,3,4,5,6 -->> 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f6104755",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter total number of elements:\n",
+      "5\n",
+      "Enter 5 elements:\n",
+      "5 0 6 0\n",
+      "1\n",
+      "\n",
+      "Your array is: 5 0 6 0 1 \n",
+      "Peak is: 6"
+     ]
+    }
+   ],
+   "source": [
+    "int i,b=0,n,*a=new int(n);;//,a[10]={8,9,8,2,3,7,6,8,11,8};\n",
+    "cout<<\"Enter total number of elements:\"<<\"\\n\";\n",
+    "cin>>n;\n",
+    "cout<<\"Enter \"<<n<<\" elements:\"<<endl;\n",
+    "for(i=0; i<n; i++){\n",
+    "    cin>>a[i];\n",
+    "}\n",
+    "for(i=0;i<n;i++){\n",
+    "    if(a[i]>a[i-1] && a[i]>a[i+1]){\n",
+    "        if(a[i]>b){\n",
+    "            b=a[i];\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "cout<<\"\\nYour array is: \";\n",
+    "for(i=0; i<n; i++){\n",
+    "    cout<<a[i]<<\" \";\n",
+    "}\n",
+    "if(b!=0){\n",
+    "    cout<<endl<<\"Peak is: \"<<b;\n",
+    "}\n",
+    "else{\n",
+    "    cout<<\"\\n No peak found\";\n",
     "}"
    ]
   }
